crates/vm/src/snapshots/mu_vm__tests__fn_call_kw-6.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(*, a):
  print a

f()


# Result (error):
[31merror[0m in code: mismatched keyword params: missing a


# Stdout:

