crates/vm/src/snapshots/mu_vm__tests__fn_call_kw-7.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(*, a, b):
  print a, b

f()


# Result (error):
[31merror[0m in code: mismatched keyword params: missing a, b


# Stdout:

