crates/vm/src/snapshots/mu_vm__tests__fn_call_kw.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(*, a):
  print a

f(a=10)


# Result (success):
none

# Stdout:
10

