crates/vm/src/snapshots/mu_vm__tests__literals-11.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
{["a"]:0, ["b"]:1, ["c"]:2}

# Result (success):
{"a": 0, "b": 1, "c": 2}

# Stdout:

