crates/vm/src/snapshots/mu_vm__tests__literals-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
true

# Result (success):
true

# Stdout:

