crates/vm/src/snapshots/mu_vm__tests__literals-3.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
false

# Func:
function <[[main]]>:
  frame_size: 4
  length: 2
  const: <empty>
  code:
    0 | push_false 
    1 | suspend 


# Result (success):
false

# Stdout:

