crates/vm/src/snapshots/mu_vm__tests__literals-4.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
1

# Result (success):
1

# Stdout:

