crates/vm/src/snapshots/mu_vm__tests__literals-5.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
0.1

# Result (success):
0.1

# Stdout:

