crates/vm/src/snapshots/mu_vm__tests__literals-6.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
1.5e3

# Result (success):
1500

# Stdout:

